Fix road naming.